Fixing tabs visibility not updating on click

--- a/app/assets/stylesheets/provider/_patternfly_tabs_fake.scss
+++ b/app/assets/stylesheets/provider/_patternfly_tabs_fake.scss
@@ -1,3 +1,5 @@
+// scss-lint:disable SelectorFormat
+
 /**
  * This are styles to fake Tab component without using PF4 css.
  *
@@ -7,16 +9,17 @@
  *
  * It is to be removed completely once using PF4 css files.
  */
+
 .pf-c-tabs {
   ul {
     list-style: none;
   }
 
   button {
-    font-size: 100%;
-    line-height: 24px; //var(--pf-global--LineHeight--md);
-    height: unset;
     cursor: pointer;
+    font-size: 100%;
+    height: unset;
+    line-height: 24px; //var(--pf-global--LineHeight--md);
   }
 
   .pf-c-tabs__list {
@@ -27,15 +30,15 @@
 
     .pf-c-tabs__item {
       .pf-c-tabs__button::before {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        content: "";
         border-color: #d2d2d2; //var(--pf-c-tabs__item--BorderColor)
         border-style: solid;
         border-width: 1px 0 1px 1px; //var(--pf-c-tabs__item--BorderWidth) 0 var(--pf-c-tabs__item--BorderWidth) var(--pf-c-tabs__item--BorderWidth);
+        bottom: 0;
+        content: '';
+        left: 0;
+        position: absolute;
+        right: 0;
+        top: 0;
       }
 
       .pf-c-tabs__button {
@@ -44,7 +47,7 @@
         color: rgb(21, 21, 21); //var(--pf-c-tabs__item--m-current--Color);
         display: inline-block;
         font-weight: 400; //var(--pf-c-tabs__button--FontWeight)
-        outline-offset: calc(-1 * 0.25rem); //var(--pf-c-tabs__button--OutlineOffset);
+        outline-offset: calc(-1 * .25rem); //var(--pf-c-tabs__button--OutlineOffset);
         padding: 8px; //var(--pf-c-tabs__button--PaddingTop) var(--pf-c-tabs__button--PaddingRight) var(--pf-c-tabs__button--PaddingBottom) var(--pf-c-tabs__button--PaddingLeft)
         position: relative;
         user-select: none;
@@ -59,7 +62,7 @@
 
       &.pf-m-current {
         .pf-c-tabs__button::before {
-          border-bottom-width: 0px;
+          border-bottom-width: 0;
         }
 
         .pf-c-tabs__button {
@@ -67,14 +70,14 @@
         }
 
         .pf-c-tabs__button::after {
-          position: absolute;
-          top: 0;
-          right: 0;
+          border-top: 2px solid #06c; //var(--pf-c-tabs__item--m-current--BorderTopWidth) solid var(--pf-c-tabs__item--m-current--Color);
           bottom: 0;
+          content: '';
           left: 0;
           margin-left: 1px; //var(--pf-c-tabs__item--BorderWidth);
-          content: "";
-          border-top: 2px solid #06c; //var(--pf-c-tabs__item--m-current--BorderTopWidth) solid var(--pf-c-tabs__item--m-current--Color);
+          position: absolute;
+          right: 0;
+          top: 0;
         }
       }
     }
